argo-apps/resume/ingress-resume.svc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume-deployment
  labels:
    app: resume
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: resume
  template:
    metadata:
      labels:
        app: resume
    spec:
      containers:
        - name: resume
          image: dodexq/resume:v2.3
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 80
          livenessProbe:
            httpGet:
              path: /app/health/livenes
              port: http
              scheme: "HTTP"
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /app/health/readnes
              port: http
              scheme: "HTTP"
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
---
kind: Service
apiVersion: v1
metadata:
  name: resume-svc
spec:
  selector:
    app: resume
  ports:
  - port: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resume-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dodex.site
    secretName: app-tls
  rules:
  - host: dodex.site
    http:
      paths:
      - pathType: Prefix
        path: /
        backend: 
          service:
            name: resume-svc
            port:
              number: 80
---
